# diffuse-cpp

./: .gitignore  .zenodo.json  CMakeLists.txt  LICENSE  README.md  paper.tex
include/: diffuse.h
research/benchmark/: RESULTS.md  bench_F16.json  bench_Q4_K_M.json  bench_Q8_0.json  real_prompts.txt
research/fase4.2/: benchmark_entropy_categories.py  benchmark_results.json  fase4.2_hallazgos.md  semantic_scheduler.py
src/: ar-cache.h  ar-graph.cpp  ar-graph.h  ar-sampler.cpp  ar-sampler.h  ar-speculative.cpp  ar-speculative.h  diffuse-cache.h  diffuse-common.h  diffuse-graph.cpp  diffuse-graph.h  diffuse-model.cpp  diffuse-model.h  diffuse-sampler.cpp  diffuse-sampler.h
tests/: test-converter-roundtrip.py  test-e2e.py  test-forward.cpp
tools/: ar-cli.cpp  bench_cache.py  compare-logits.py  convert-dream.py  convert-llada.py  dump-logits.cpp  format-benchmark.py  generate.py  main-bench.cpp  main-cli.cpp  quantize.cpp  run-benchmark.sh  validate-gguf.py  validate-logits.py
